--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,16 @@ pipeline{
         stage('BUILD'{
             steps{
                 sh 'printenv'
-                sh'docker build-t ecr-demoimg .' 
+                 
             }
-        })
-    }
+        }
+        stage('Publish ECR'){
+        steps {
+        withenv (["AWS_ACCESS_KEY_ID=${env.AWS_ACCESS_KEY_ID}", "AWS_SECRET_ACCESS_KEY=${env.AWS_SECRET_ACCESS_KEY}", "AWS_DEFAULT_REGION=${env.AWS_DEFAULT_REGION}"]){
+        sh 'docker login -u AWS -p $(aws ecr-public get-login-password --region us-east-1 )  public.ecr.aws/t6d9l0c9'
+        sh 'docker tag  workshop62 :"$BUILD_ID""'
+        sh 'docker push  public.ecr.aws/t6d9l0c9/workshop62:latest:""$BUILD_ID""'
+   }
 }
+}
+})
